CSS Fixes (see description)
+ Fixed overlaping item title with the cart emoji on small screen
+ Fixed minimal size of the basket on small screen (full width)

--- a/eboutic/static/eboutic/css/eboutic.css
+++ b/eboutic/static/eboutic/css/eboutic.css
@@ -38,6 +38,7 @@
         margin-top: 4px;
     }
     #basket {
+        width: -webkit-fill-available;
     }
 }
 
@@ -140,7 +141,8 @@
     }
 
     #eboutic .product-description h4{
-        text-align: left;   
+        text-align: left;
+        max-width: 90%;
     }
 }
 
